--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "firebase": "^12.8.0",
     "pinia": "^3.0.4",
+    "sweetalert2": "^11.26.17",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4",
     "vue-toastification": "^2.0.0-rc.5"
