--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "format": "oxfmt src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/vue-fontawesome": "^3.1.3",
     "axios": "^1.13.4",
     "dotenv": "^17.2.3",
     "firebase": "^12.8.0",
